--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12b31e3aab0>]"
+       "[<matplotlib.lines.Line2D at 0x225a8adaf30>]"
       ]
      },
      "execution_count": 4,
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d5e256fe",
    "metadata": {},
    "outputs": [
