--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "def3fae8",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "a02eb84b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "98198b0f",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "20.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,17 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "138feb89",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x225a8adaf30>]"
+       "[<matplotlib.lines.Line2D at 0x225c8e72750>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "2ed28372",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "0.0029999999995311555"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "250ebf34",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "b472bc52",
    "metadata": {},
    "outputs": [
@@ -156,37 +156,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "d5e256fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Value(data=-6.0), Value(data=10.0)}"
+       "'+'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Value:\n",
-    "    def __init__(self, data, _children=()):\n",
+    "    def __init__(self, data, _children=(), _op=''):\n",
     "        self.data = data\n",
     "        self._prev = set(_children)\n",
+    "        self._op = _op\n",
     "\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"Value(data={self.data})\"\n",
     "    \n",
     "    def __add__(self, other):\n",
-    "        out = Value(self.data + other.data, (self, other))\n",
+    "        out = Value(self.data + other.data, (self, other), '+')\n",
     "        return out\n",
     "    \n",
     "    def __mul__(self, other):\n",
-    "        out = Value(self.data * other.data, (self, other))\n",
+    "        out = Value(self.data * other.data, (self, other), '*')\n",
     "        return out\n",
     "    \n",
     "a = Value(2.0)\n",
@@ -194,13 +195,79 @@
     "c = Value(10.0)\n",
     "d = a*b+c\n",
     "\n",
-    "d._prev"
+    "d._prev\n",
+    "d._op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b513c970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graphviz import Digraph\n",
+    "\n",
+    "def trace(root):\n",
+    "  # builds a set of all nodes and edges in a graph\n",
+    "  nodes, edges = set(), set()\n",
+    "  def build(v):\n",
+    "    if v not in nodes:\n",
+    "      nodes.add(v)\n",
+    "      for child in v._prev:\n",
+    "        edges.add((child, v))\n",
+    "        build(child)\n",
+    "  build(root)\n",
+    "  return nodes, edges\n",
+    "\n",
+    "def draw_dot(root):\n",
+    "  dot = Digraph(format='svg', graph_attr={'rankdir': 'LR'}) # LR = left to right\n",
+    "  \n",
+    "  nodes, edges = trace(root)\n",
+    "  for n in nodes:\n",
+    "    uid = str(id(n))\n",
+    "    # for any value in the graph, create a rectangular ('record') node for it\n",
+    "    dot.node(name = uid, label = \"{ %s | data %.4f | grad %.4f }\" % (n.label, n.data, n.grad), shape='record')\n",
+    "    if n._op:\n",
+    "      # if this value is a result of some operation, create an op node for it\n",
+    "      dot.node(name = uid + n._op, label = n._op)\n",
+    "      # and connect this node to it\n",
+    "      dot.edge(uid + n._op, uid)\n",
+    "\n",
+    "  for n1, n2 in edges:\n",
+    "    # connect n1 to the op node of n2\n",
+    "    dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "\n",
+    "  return dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2b5698e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Value' object has no attribute 'label'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdraw_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43md\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36mdraw_dot\u001b[39m\u001b[34m(root)\u001b[39m\n\u001b[32m     20\u001b[39m uid = \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mid\u001b[39m(n))\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# for any value in the graph, create a rectangular ('record') node for it\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m dot.node(name = uid, label = \u001b[33m\"\u001b[39m\u001b[33m{\u001b[39m\u001b[33m \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m | data \u001b[39m\u001b[38;5;132;01m%.4f\u001b[39;00m\u001b[33m | grad \u001b[39m\u001b[38;5;132;01m%.4f\u001b[39;00m\u001b[33m }\u001b[39m\u001b[33m\"\u001b[39m % (\u001b[43mn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlabel\u001b[49m, n.data, n.grad), shape=\u001b[33m'\u001b[39m\u001b[33mrecord\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m n._op:\n\u001b[32m     24\u001b[39m   \u001b[38;5;66;03m# if this value is a result of some operation, create an op node for it\u001b[39;00m\n\u001b[32m     25\u001b[39m   dot.node(name = uid + n._op, label = n._op)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Value' object has no attribute 'label'"
+     ]
+    }
+   ],
+   "source": [
+    "draw_dot(d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b513c970",
+   "id": "bb2af30d",
    "metadata": {},
    "outputs": [],
    "source": []
